--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
-                <a href="Dashboard.html">administrator</a>
+                <!-- <a href="Dashboard.html">administrator</a> -->
             </nav>
 
             <div class="icons">
@@ -61,7 +61,9 @@
                 <a href="card.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
+                
                 <li class="fas fa-user-alt drop-menu">
+                  
                     <ul>
                         <li>
                             <a href="login.html"><i class="fas fa-sign-in-alt"></i> Đăng Nhập</a>
@@ -80,7 +82,8 @@
                         </li>
                     </ul>
                 </li>
-                <a href="login.html" class="fas fa-user-alt"></a>
+                <div class="_username">ThanhND</div>
+                <!-- <a href="login.html" class="fas fa-user-alt"></a> -->
             </div>
         </div>
     </header>
@@ -253,7 +256,7 @@
                     <a href="#" class="fas fa-shopping-cart"></a>
                 </div>
                 <img src="images/product-1.png" alt="">
-                <h3><a href="#">Banana</a></h3>
+                <div class="product_name"><a href="#">Bananaasdasdasdasdasdasdasdasdasd</a></div>
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -271,7 +274,7 @@
                     <a href="#" class="fas fa-shopping-cart"></a>
                 </div>
                 <img src="images/product-2.png" alt="">
-                <h3><a href="#">Banana</a></h3>
+               <h3><a href="#">Banana</a></h3>
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -289,7 +292,7 @@
                     <a href="#" class="fas fa-shopping-cart"></a>
                 </div>
                 <img src="images/product-3.png" alt="">
-                <h3><a href="#">Banana</a></h3>
+               <h3><a href="#">Banana</a></h3>
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
