--- a/order.html
+++ b/order.html
@@ -157,10 +157,10 @@
                         10:00:00 20-10-2021
                     </td>
                     <td class="total">250.000đ</td>
-                    <td>
-                        <a href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list"></a>
-                        <a href="#" title="Hủy đơn" class="fas fa-ban"></a>
-                        <a href="#" style="color: gray;" title="Hủy đơn" class="fas fa-ban"></a>
+                    <td >
+                        <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
+                        <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
+                        <!-- <a  style="color: #fff; background-color: gray; text-transform: lowercase;" title="Hủy đơn">Hủy đơn</a> -->
                     </td>
                 </tr>
                 <tr>
@@ -174,8 +174,8 @@
                     </td>
                     <td class="total">250.000đ</td>
                     <td>
-                        <a href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list"></a>
-                        <a href="#" title="Hủy đơn" class="fas fa-ban"></a>
+                        <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
+                        <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
                     </td>
                 </tr>
                 <tr>
@@ -189,8 +189,8 @@
                     </td>
                     <td class="total">250.000đ</td>
                     <td>
-                        <a href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list"></a>
-                        <a href="#" title="Hủy đơn" class="fas fa-ban"></a>
+                        <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
+                        <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
                     </td>
                 </tr>
                 <tr>
@@ -204,8 +204,8 @@
                     </td >
                     <td class="total">250.000đ</td>
                     <td>
-                        <a href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list"></a>
-                        <a href="#" title="Hủy đơn" class="fas fa-ban"></a>
+                        <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
+                        <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
                     </td>
                 </tr>
             </table>
@@ -214,16 +214,16 @@
           <div class="col-4 m-auto navigation">
               <ul>
                   <li>
-                      <a href="#" class="fas fa-fast-backward"></a></a>
+                      <a href="#" >First</a>
                   </li>
                   <li>
-                      <a href="#" class="fas fa-step-backward"></a>
+                      <a href="#" >Prev</a>
                   </li>
                   <li>
-                      <a href="#" class="fas fa-step-forward"></a>
+                      <a href="#" >Next</a>
                   </li>
                   <li>
-                      <a href="#"  class="fas fa-fast-forward"></a>
+                      <a href="#"  >Last</a>
                   </li>
               </ul>
 
