--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
-                <!-- <a href="Dashboard.html">administrator</a> -->
+                <a href="Dashboard.html">administrator</a>
             </nav>
 
             <div class="icons">
@@ -58,7 +58,7 @@
                 <a href="#" class="fas fa-heart">
                     <span>2</span>
                 </a>
-                <a href="card.html" class="fas fa-shopping-cart">
+                <a href="cart.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
                 
