--- a/billingDetails.html
+++ b/billingDetails.html
@@ -26,7 +26,7 @@
 <body>
 
     <header>
-        <div class="social-call">
+        <div class="social-call" id="top">
             <div class="social">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -56,10 +56,12 @@
                 <a href="#" class="fas fa-heart">
                     <span>2</span>
                 </a>
-                <a href="card.html" class="fas fa-shopping-cart">
+                <a href="cart.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
+                
                 <li class="fas fa-user-alt drop-menu">
+                  
                     <ul>
                         <li>
                             <a href="login.html"><i class="fas fa-sign-in-alt"></i> Đăng Nhập</a>
@@ -78,7 +80,8 @@
                         </li>
                     </ul>
                 </li>
-                <a href="login.html" class="fas fa-user-alt"></a>
+                <div class="_username">ThanhND</div>
+                <!-- <a href="login.html" class="fas fa-user-alt"></a> -->
             </div>
         </div>
     </header>
@@ -95,12 +98,11 @@
         </div>
     </div>
 
-    <div class="titlePage">
-        <h1>Chi tiết hóa đơn</h1>
-        <div class="link">
-            <a href="#">Trang chủ</a> - <a href="#">Đơn Hàng</a> - <a href="#">Chi tiết đơn hàng</a>
-        </div>
-    </div>
+    <section class="titlePage-cart">
+            <div class="box-text">
+                <a style=" color: #ccc" href="#">Giỏ hàng</a> <span> < </span> <a href="">Chi tiết thanh toán</a> <span> < </span> <a style=" color: #ccc" href="#">Đặt hàng thành công</a>
+            </div>
+    </section>
 
 
 
