--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="search-input">
             <!-- input -->
             <input type="text" placeholder="Search For Product">
-            <!-- cancel-btn -->
+            <!-- cancel-_btn -->
             <a href="javascript:void(0);" class="search-cancel">
                 <i class="fas fa-times"></i>
             </a>
@@ -106,7 +106,7 @@
         <div class="content">
             <h3>Rau xanh chuẩn <span>oganic</span></h3>
             <p>Giảm giá khi mua hôm nay :)</p>
-            <a href="#" class="btn">mua ngay</a>
+            <a href="#" class="_btn">mua ngay</a>
         </div>
 
         <div class="image">
@@ -224,7 +224,7 @@
             <div class="content">
                 <h3>Giảm giá</h3>
                 <p>đến 45% với thành viên</p>
-                <a href="#" class="btn">Check out</a>
+                <a href="#" class="_btn">Check out</a>
             </div>
         </div>
         <div class="banner_sale">
@@ -232,7 +232,7 @@
             <div class="content">
                 <h3>Khuyến mãi</h3>
                 <p>các mặt hàng đến 20%</p>
-                <a href="#" class="btn">check out</a>
+                <a href="#" class="_btn">check out</a>
             </div>
         </div>
 
@@ -428,7 +428,7 @@
                 </div>
             </div>
 
-            <!-- <a href="#" class="btn">Check the deal</a> -->
+            <!-- <a href="#" class="_btn">Check the deal</a> -->
 
         </div>
 
