--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
         <div class="search-input">
             <!-- input -->
             <input type="text" placeholder="Search For Product">
-            <!-- cancel-btn -->
+            <!-- cancel-_btn -->
             <a href="javascript:void(0);" class="search-cancel">
                 <i class="fas fa-times"></i>
             </a>
@@ -116,7 +116,7 @@
                         <div class="register_link">
                             <h1>Bạn chưa có tài khoảng</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, recusandae.</p>
-                            <a href="#" class="btn">Đăng ký tài khoảng</a>
+                            <a href="#" class="_btn">Đăng ký tài khoảng</a>
                         </div>
                     </div>
                     <div class="box">
@@ -141,7 +141,7 @@
                                 Remember me
                               </label>
                             </div>
-                            <button type="submit" class="btn" value="Đăng Nhập">Đăng Nhập</button>
+                            <button type="submit" class="_btn" value="Đăng Nhập">Đăng Nhập</button>
                             <a href="#" style="float: right;">Quên mật khẩu?</a>
 
                             <div class="login_orther">
