--- a/product.html
+++ b/product.html
@@ -361,7 +361,7 @@
                 </div>
 
             </div>
-            <a href="#" class="btn">Show</a>
+            <a href="#" class="_btn">Show</a>
         </div>
 
     </section>
