--- a/account.html
+++ b/account.html
@@ -90,7 +90,7 @@
         <div class="search-input">
             <!-- input -->
             <input type="text" placeholder="Search For Product">
-            <!-- cancel-btn -->
+            <!-- cancel-._btn -->
             <a href="javascript:void(0);" class="search-cancel">
                 <i class="fas fa-times"></i>
             </a>
