--- a/order.html
+++ b/order.html
@@ -12,7 +12,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style.css link -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Order Style css -->
+    <link rel="stylesheet" href="css/siteStyle/orderStyle.css">
     <!-- lightSlide.css link -->
+    
     <link rel="stylesheet" href="css/lightSlider.css">
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -91,7 +94,7 @@
         <div class="search-input">
             <!-- input -->
             <input type="text" placeholder="Search For Product">
-            <!-- cancel-btn -->
+            <!-- cancel-_btn -->
             <a href="javascript:void(0);" class="search-cancel">
                 <i class="fas fa-times"></i>
             </a>
@@ -147,6 +150,7 @@
                     <th>Điện thoại</th>
                     <th>Ngày mua</th>
                     <th >Tổng tiền</th>
+                    <th style="text-align: center;">Tình trạng</th>
                     <th></th>
                 </tr>
 
@@ -160,6 +164,7 @@
                         10:00:00 20-10-2021
                     </td>
                     <td class="total">250.000đ</td>
+                    <td style="text-align: center; font-size: 1.5rem;"><span>Chờ xác nhận</span></td>
                     <td >
                         <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
                         <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
@@ -176,9 +181,10 @@
                         10:00:00 20-10-2021
                     </td>
                     <td class="total">250.000đ</td>
+                    <td style="text-align: center; font-size: 1.5rem;"><span>Chờ xác nhận</span></td>
                     <td>
                         <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
-                        <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
+                        <a class="cancel_order" style="background-color: var(--light-color);" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
                     </td>
                 </tr>
                 <tr>
@@ -191,6 +197,7 @@
                         10:00:00 20-10-2021
                     </td>
                     <td class="total">250.000đ</td>
+                    <td style="text-align: center; font-size: 1.5rem;"><span>Chờ xác nhận</span></td>
                     <td>
                         <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
                         <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
@@ -206,6 +213,7 @@
                         10:00:00 20-10-2021
                     </td >
                     <td class="total">250.000đ</td>
+                    <td style="text-align: center; font-size: 1.5rem;"><span>Chờ xác nhận</span></td>
                     <td>
                         <a class="order_detail" href="orderDetail.html" title="Xem chi tiết" class="fas fa-clipboard-list">chi tiết</a>
                         <a class="cancel_order" style="background-color: var(--danger);" href="#" title="Hủy đơn" class="fas fa-ban">hủy đơn</a>
@@ -236,7 +244,7 @@
          
 
         </div>
-        <a href="#" class="btn">Tiếp tục mua sắm</a>
+        <a href="#" class="_btn">Tiếp tục mua sắm</a>
     </section>
 
 
