--- a/admin/Dashboard.html
+++ b/admin/Dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="../css/styleAdmin.css" />
     <title>Bootstap 5 Responsive Admin Dashboard</title>
@@ -16,17 +16,29 @@
     <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class=" _siderbar" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><a href="index.html"
-                    class="fas fa-user-secret me-2 home" >VGreens</a></div>
+            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase"><a href="index.html"
+                    class="fas fa-user-secret me-2 home">VGreens</a></div>
             <div class="list-group list-group-flush my-3">
                 <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text active"><i
-                        class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+                        class="fas fa-home me-2"></i>Dashboard </a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text fw-bold"><i
                         class="fas fa-project-diagram me-2"></i>Đơn Hàng</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text fw-bold"><i
-                        class="fas fa-chart-line me-2"></i>Sản Phẩm</a>
-                <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text fw-bold"><i
-                        class="fas fa-paperclip me-2"></i>Loại Sản Phẩm</a>
+                <a
+                    class="list-group-item list-group-item-action bg-transparent links second-text fw-bold  dropdown-btn"><i
+                        class="fas fa-chart-line me-2"></i>Sản Phẩm <span class="fas fa-angle-right"></span></a>
+                <div class="dropdown-container">
+                    <a href="#"><i class="fab fa-product-hunt"></i> Danh sách </a>
+                    <a href="#"><i class="fab fa-product-hunt"></i> Nhập liệu</a>
+                    <a href="#"><i class="fab fa-product-hunt"></i> Quảng lý lô hàng</a>
+                </div>
+                <a
+                    class="list-group-item list-group-item-action bg-transparent links second-text fw-bold  dropdown-btn"><i
+                        class="fas fa-paperclip me-2"></i>Khách hàng <span class="fas fa-angle-right"></span></a>
+                <div class="dropdown-container">
+                    <a href="#"><i class="fab fa-product-hunt"></i> Danh sách </a>
+                    <a href="#"><i class="fab fa-product-hunt"></i> Nhập liệu</a>
+                    <a href="#"><i class="fab fa-product-hunt"></i> Quảng lý lô hàng</a>
+                </div>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text fw-bold"><i
                         class="fas fa-shopping-cart me-2"></i>Người Dùng</a>
                 <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text fw-bold"><i
@@ -43,7 +55,7 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg shadow-sm navbar-light  py-4 px-4">
+            <nav class="navbar navbar-expand-lg shadow-sm navbar-light  ">
                 <div class="d-flex align-items-center">
                     <i class="fas fa-align-left primary-text fs-4 me-3" id="menu-toggle"></i>
                     <h2 class="fs-2 m-0">Dashboard</h2>
@@ -75,7 +87,8 @@
             <div class="container-fluid px-4">
                 <div class="row g-3 my-2">
                     <div class="col-md-3">
-                        <div class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
+                        <div style="border-left: .3rem solid green"
+                            class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
                             <div>
                                 <h3 class="fs-2">720</h3>
                                 <p class="fs-5">Products</p>
@@ -85,7 +98,8 @@
                     </div>
 
                     <div class="col-md-3">
-                        <div class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
+                        <div style="border-left: .3rem solid rebeccapurple"
+                            class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
                             <div>
                                 <h3 class="fs-2">4920</h3>
                                 <p class="fs-5">Sales</p>
@@ -96,7 +110,8 @@
                     </div>
 
                     <div class="col-md-3">
-                        <div class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
+                        <div style="border-left: .3rem solid aqua"
+                            class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
                             <div>
                                 <h3 class="fs-2">3899</h3>
                                 <p class="fs-5">Delivery</p>
@@ -106,7 +121,8 @@
                     </div>
 
                     <div class="col-md-3">
-                        <div class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
+                        <div style="border-left: .3rem solid red"
+                            class="p-3 bg-white d-flex justify-content-around align-items-center rounded">
                             <div>
                                 <h3 class="fs-2">%25</h3>
                                 <p class="fs-5">Increase</p>
@@ -118,7 +134,7 @@
 
                 <div class="row my-5">
                     <h3 class="fs-4 mb-3">Recent Orders</h3>
-                    <div class="col">
+                    <div class="col-8">
                         <table class="table bg-white rounded shadow-sm  table-hover">
                             <thead>
                                 <tr>
@@ -204,6 +220,14 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="col-4">
+                        <h1>Top sản phẩm</h1>
+                        <table>
+                            <tr>
+                                <th>Sản phẩm</th>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
 
             </div>
@@ -220,6 +244,22 @@
         toggleButton.onclick = function () {
             el.classList.toggle("toggled");
         };
+    </script>
+    <script>
+        var dropdown = document.getElementsByClassName("dropdown-btn");
+        var i;
+
+        for (i = 0; i < dropdown.length; i++) {
+            dropdown[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                } else {
+                    dropdownContent.style.display = "block";
+                }
+            });
+        }
     </script>
 </body>
 
